expression module was developed